Added table deletion
